name:           yi-frontend-pango
version:        0.19.2
synopsis:       Pango frontend for Yi editor
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

data-files:
    art/*.png

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , containers
    , filepath
    , glib  >= 0.13 && < 0.14
    , gtk >= 0.13 && < 0.16
    , microlens-platform
    , mtl
    , oo-prototypes
    , pango >= 0.13 && < 0.14
    , pointedlist
    , text
    , transformers-base
    , yi-core >= 0.19
    , yi-language >= 0.19
    , yi-rope >= 0.10
  exposed-modules:
      Yi.Config.Default.Pango
      Yi.Frontend.Pango
      Yi.Frontend.Pango.Control
  other-modules:
      Yi.Frontend.Pango.Layouts
      Yi.Frontend.Pango.Utils
      Paths_yi_frontend_pango
  default-language: Haskell2010
