name:           yi-frontend-vty
version:        0.13
category:       Development, Editor
synopsis:       The Haskell-Scriptable Editor
description:
  Yi is a text editor written in Haskell and extensible in Haskell. The goal of the Yi project is
  to provide a flexible, powerful, and correct editor for haskell hacking.
license:        GPL-2
license-file:   ../LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       https://yi-editor.github.io
bug-reports:    https://github.com/yi-editor/yi/issues
Cabal-Version:  >= 1.20
tested-with:    GHC==7.10.3, GHC==8.0.1
build-type:     Simple

source-repository head
  type:     git
  location: https://github.com/yi-editor/yi.git

library
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
    base,
    containers,
    dlist,
    microlens-platform,
    pointedlist,
    stm >= 2.2,
    text,
    vty >= 5.4,
    yi-core,
    yi-language

  ghc-options: -Wall -fno-warn-orphans -ferror-spans

  exposed-modules:
    Yi.Frontend.Vty
    Yi.Frontend.Vty.Conversions
