name:           yi-fuzzy-open
version:        0.18.0
synopsis:       Fuzzy open plugin for yi
description:    This plugin tries to do what ctrl-p does for vim and helm does for emacs.
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , binary >= 0.7.5
    , containers >= 0.5.6
    , data-default >= 0.5
    , directory >= 1.2.2
    , filepath >= 1.4.0
    , mtl >= 2.2
    , pointedlist >= 0.5
    , text >= 1.2
    , transformers-base >= 0.4.4
    , vector >= 0.11
    , yi-core >= 0.18
    , yi-language >= 0.18
    , yi-rope >= 0.10
  exposed-modules:
      Yi.Fuzzy
  other-modules:
      Data.List.PointedList.Extras
      Paths_yi_fuzzy_open
  default-language: Haskell2010
