name:           yi-intero
version:        0.17.0
synopsis:       Intero support for Yi
category:       Yi
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , binary
    , data-default
    , process
    , transformers-base
    , yi-rope >= 0.10
    , text
    , yi-core >= 0.17
    , yi-language >= 0.17
    , transformers
    , filepath
    , directory
    , microlens-platform
  exposed-modules:
      Yi.Intero
  other-modules:
      InteroAPI
      Paths_yi_intero
  default-language: Haskell2010
