name:           yi-ireader
version:        0.18.0
synopsis:       Yi editor incremental reader
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , bytestring
    , binary >= 0.7
    , containers
    , data-default
    , microlens-platform
    , text
    , yi-core >= 0.18
    , yi-language >= 0.18
    , yi-rope >= 0.10
  exposed-modules:
      Yi.Mode.IReader
      Yi.IReader
  other-modules:
      Paths_yi_ireader
  default-language: Haskell2010
