name:           yi-keymap-cua
version:        0.18.0
synopsis:       Cua keymap for Yi editor
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , microlens-platform
    , text
    , yi-core >= 0.18
    , yi-keymap-emacs >= 0.18
    , yi-rope >= 0.10
  exposed-modules:
      Yi.Config.Default.Cua
      Yi.Keymap.Cua
  other-modules:
      Paths_yi_keymap_cua
  default-language: Haskell2010
