name:           yi-misc-modes
version:        0.19.1
synopsis:       Yi editor miscellaneous modes
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    src/Yi/Lexer/common.hsinc

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  include-dirs:
      src/Yi/Lexer
  build-depends:
      array
    , base >= 4.8 && < 5
    , binary >= 0.7
    , data-default
    , filepath
    , microlens-platform
    , text
    , yi-core >= 0.19
    , yi-language >= 0.19
    , yi-rope >= 0.10
  build-tools:
      alex >= 3.0.3 && < 3.2.0 || >= 3.2.1
  exposed-modules:
      Yi.Config.Default.MiscModes
      Yi.Modes
      Yi.Mode.Buffers
      Yi.Mode.Abella
      Yi.Mode.Latex
      Yi.Lexer.Abella
      Yi.Lexer.C
      Yi.Lexer.Cabal
      Yi.Lexer.Clojure
      Yi.Lexer.Cplusplus
      Yi.Lexer.GNUMake
      Yi.Lexer.GitCommit
      Yi.Lexer.JSON
      Yi.Lexer.Java
      Yi.Lexer.Latex
      Yi.Lexer.OCaml
      Yi.Lexer.ObjectiveC
      Yi.Lexer.Ott
      Yi.Lexer.Perl
      Yi.Lexer.Python
      Yi.Lexer.R
      Yi.Lexer.Ruby
      Yi.Lexer.SVNCommit
      Yi.Lexer.Srmc
      Yi.Lexer.Whitespace
      Yi.Syntax.Latex
  other-modules:
      Yi.Lexer.BasicTemplate
      Paths_yi_misc_modes
  default-language: Haskell2010
