name:           yi-mode-haskell
version:        0.13
category:       Development, Editor
synopsis:       The Haskell-Scriptable Editor
description:
  Yi is a text editor written in Haskell and extensible in Haskell. The goal of the Yi project is
  to provide a flexible, powerful, and correct editor for haskell hacking.
license:        GPL-2
license-file:   ../LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       https://yi-editor.github.io
bug-reports:    https://github.com/yi-editor/yi/issues
Cabal-Version:  >= 1.20
tested-with:    GHC==7.10.3, GHC==8.0.1
build-type:     Simple
extra-source-files:  src/Yi/Lexer/common.hsinc

source-repository head
  type:     git
  location: https://github.com/yi-editor/yi.git

library
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    Yi.Lexer.Haskell
    Yi.Lexer.LiterateHaskell
    Yi.Mode.Haskell
    Yi.Mode.Haskell.Dollarify
    Yi.Syntax.Haskell
    Yi.Syntax.Paren
    Yi.Syntax.Strokes.Haskell

  build-depends:    base >= 4 && < 5
                  , array
                  , binary
                  , data-default
                  , microlens-platform
                  , text
                  , yi-core
                  , yi-language
                  , yi-rope

  include-dirs:     src/Yi/Lexer
  ghc-options: -Wall -fno-warn-orphans -ferror-spans
