name:           yi-mode-haskell
version:        0.19.1
synopsis:       Yi editor haskell mode
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    src/Yi/Lexer/common.hsinc

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  include-dirs:
      src/Yi/Lexer
  build-depends:
      base >= 4.8 && < 5
    , array
    , binary >= 0.7
    , data-default
    , filepath
    , microlens-platform
    , text
    , yi-core >= 0.19
    , yi-language >= 0.19
    , yi-rope >= 0.10
  build-tools:
      alex >= 3.0.3 && < 3.2.0 || >= 3.2.1
  exposed-modules:
      Yi.Config.Default.HaskellMode
      Yi.Lexer.Haskell
      Yi.Lexer.LiterateHaskell
      Yi.Mode.GHCi
      Yi.Mode.Haskell
      Yi.Mode.Haskell.Dollarify
      Yi.Syntax.Haskell
      Yi.Syntax.Paren
      Yi.Syntax.Strokes.Haskell
  other-modules:
      Paths_yi_mode_haskell
  default-language: Haskell2010
