name:           yi-mode-javascript
version:        0.19.1
synopsis:       Yi editor javascript mode
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    src/Yi/Lexer/common.hsinc

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  include-dirs:
      src/Yi/Lexer
  build-depends:
      base >= 4.8 && < 5
    , array
    , binary >= 0.7
    , data-default
    , dlist
    , filepath
    , microlens-platform
    , mtl
    , text
    , yi-core >= 0.19
    , yi-language >= 0.19
    , yi-rope >= 0.10
  build-tools:
      alex >= 3.0.3 && < 3.2.0 || >= 3.2.1
  exposed-modules:
      Yi.Config.Default.JavaScriptMode
      Yi.Mode.JavaScript
      Yi.Syntax.JavaScript
      Yi.Verifier.JavaScript
      Yi.Lexer.JavaScript
  other-modules:
      Paths_yi_mode_javascript
  default-language: Haskell2010
