name:           yi-snippet
version:        0.18.0
synopsis:       Snippet support for yi
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , containers >= 0.5.6
    , yi-rope >= 0.10
    , binary >= 0.7.5
    , data-default >= 0.5
    , free >= 4.12
    , microlens-platform
    , mtl >= 2.2
    , text >= 1.2
    , vector >= 0.11
    , yi-core >= 0.18
  exposed-modules:
      Yi.Snippet
      Yi.Snippet.Internal
  other-modules:
      Paths_yi_snippet
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , containers >= 0.5.6
    , yi-rope >= 0.10
    , tasty-th
    , tasty-hunit
    , yi-snippet
  default-language: Haskell2010
