name:           yi
version:        0.13.0
category:       Development, Editor
synopsis:       The Haskell-Scriptable Editor
description:
  Yi is a text editor written in Haskell and extensible in Haskell. The goal of the Yi project is
  to provide a flexible, powerful, and correct editor for haskell hacking.
license:        GPL-2
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       https://yi-editor.github.io
bug-reports:    https://github.com/yi-editor/yi/issues
Cabal-Version:  >= 1.20
tested-with:    GHC==7.10.3, GHC==8.0.1
build-type:     Simple

source-repository head
  type:     git
  location: https://github.com/yi-editor/yi.git

flag profiling
  Default: False
  Description:
    Runtime binary will be compiled with profiling and RTS
    options enabled.

flag eventlog
  Default: False
  Description:
    Runtime binary will be compiled with eventlog and RTS
    options enabled.

executable yi
  hs-source-dirs: src/executable
  default-language: Haskell2010

  if flag(profiling)
    cpp-options: -DPROFILING

  main-is: Main.hs

  build-depends:
    base >=4 && <5, yi-core

  ghc-options: -threaded