name:           yi
version:        0.19.2
synopsis:       Yi editor
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

flag emacs
  description: Include the emacs keymap
  manual: True
  default: True

flag pango
  description: Include the pango (GUI) frontend
  manual: True
  default: True

flag vim
  description: Include the vim keymap
  manual: True
  default: True

flag vty
  description: Include the vty (CLI) frontend
  manual: True
  default: True

executable yi
  main-is: Main.hs
  hs-source-dirs:
      ./
  ghc-options: -Wall -ferror-spans -threaded -eventlog -rtsopts
  build-depends:
      base >= 4.8 && < 5
    , microlens-platform >= 0.3.4.0
    , mtl >= 2.2.1
    , optparse-applicative >= 0.13.0.0
    , yi-core >= 0.19
    , yi-misc-modes >= 0.19
    , yi-mode-haskell >= 0.19
    , yi-mode-javascript >= 0.19
    , yi-rope >= 0.10
  if flag(vty)
    cpp-options: -DVTY
    build-depends:
        yi-frontend-vty >= 0.19
  if flag(pango)
    cpp-options: -DPANGO
    build-depends:
        yi-frontend-pango >= 0.19
  if flag(vim)
    cpp-options: -DVIM
    build-depends:
        yi-keymap-vim >= 0.19
  if flag(emacs)
    cpp-options: -DEMACS
    build-depends:
        yi-keymap-emacs >= 0.19
  default-language: Haskell2010
