name:           yi-all-static
version:        0.19.0
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

flag emacs
  description: Include the emacs keymap
  manual: True
  default: True

flag pango
  description: Include the pango (GUI) frontend
  manual: True
  default: True

flag vim
  description: Include the vim keymap
  manual: True
  default: True

flag vty
  description: Include the vty (CLI) frontend
  manual: True
  default: True

executable yi
  main-is: Main.hs
  hs-source-dirs:
      ./.
  ghc-options: -Wall -ferror-spans -threaded
  build-depends:
      base >= 4.8 && < 5
    , microlens-platform
    , mtl
    , optparse-applicative >= 0.13.0.0
    , yi-core
    , yi-misc-modes
    , yi-mode-haskell
    , yi-mode-javascript
    , yi-rope
  if flag(vty)
    cpp-options: -DVTY
    build-depends:
        yi-frontend-vty
  if flag(pango)
    cpp-options: -DPANGO
    build-depends:
        yi-frontend-pango
  if flag(vim)
    cpp-options: -DVIM
    build-depends:
        yi-keymap-vim
  if flag(emacs)
    cpp-options: -DEMACS
    build-depends:
        yi-keymap-emacs
  default-language: Haskell2010
