name:                yi-vim-pango-dynamic
version:             0.16.0
license:             GPL-2
author:              Jaro Reinders
maintainer:          yi-devel@googlegroups.com
build-type:          Simple
cabal-version:       >=1.10

executable yi
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10
                     , yi-core
                     , yi-dynamic-configuration
                     , yi-keymap-vim
                     , yi-frontend-pango
                     , yi-mode-haskell
                     , yi-mode-javascript
                     , yi-misc-modes
                     , yi-rope
                     , oo-prototypes
                     , microlens-platform
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
