name:                yi-vim-vty-dynamic
version:             0.17.0
license:             GPL-2
author:              Jaro Reinders
maintainer:          yi-devel@googlegroups.com
build-type:          Simple
cabal-version:       >=1.10

executable yi
  main-is:             yi.hs
  build-depends:       base >=4.8 && <5
                     , yi-core >= 0.17
                     , yi-dynamic-configuration >= 0.17
                     , yi-keymap-vim >= 0.17
                     , yi-frontend-vty >= 0.17
                     , yi-mode-haskell >= 0.17
                     , yi-mode-javascript >= 0.17
                     , yi-misc-modes >= 0.17
                     , yi-rope >= 0.10
                     , oo-prototypes
                     , microlens-platform
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
