name:                yi-vim-vty-dynamic
version:             0.17.1
license:             GPL-2
author:              Jaro Reinders
maintainer:          yi-devel@googlegroups.com
build-type:          Simple
cabal-version:       >=1.10

executable yi
  main-is:             yi.hs
  build-depends:       base >=4.8 && <5
                     , yi-core
                     , yi-dynamic-configuration
                     , yi-keymap-vim
                     , yi-frontend-vty
                     , yi-mode-haskell
                     , yi-mode-javascript
                     , yi-misc-modes
                     , yi-rope
                     , oo-prototypes
                     , microlens-platform
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
